--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-asset": "^2.1.1",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
