--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~51.0.28",
     "expo-status-bar": "~1.12.1",
