--- a/app.json
+++ b/app.json
@@ -1,27 +1,4 @@
 {
-  "expo": {
-    "name": "odyssei",
-    "slug": "odyssei",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/compass.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    }
-  }
+  "name": "odyssei",
+  "displayName": "odyssei"
 }
