--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.3.1",
     "react-native": "0.75.3",
     "react-native-blob-util": "^0.19.11",
+    "react-native-elements": "^3.4.3",
     "react-native-pdf": "^6.7.5",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0"
